--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Writeups and somestuff
 email: cg494@kent.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
   This website will host writeups and information that I have gathered over the course of my learning.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  Coaran
 
